[package]
name = "rustjack"
version = "0.1.1"
edition = "2024"
authors = ["Krzysztof Furman <k_furman@outlook.com>"]
description = "A simple TUI blackjack game in Rust with crossterm."
license = "MIT"
repository = "https://github.com/krisfur/rustjack"
readme = "README.md"

[dependencies]
rand = "0.9.2"
crossterm = "0.27"
unicode-width = "0.1"